--- a/tox.ini
+++ b/tox.ini
@@ -1,46 +1,46 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py27,py36,lint
+envlist = py27, py36, lint
 skipsdist = True
 
 [travis]
 python =
-  2.7: py27
-  3.6: py36, docs, lint
+2.7: py27
+3.6: py36, docs, lint
 
 [testenv]
-deps=-rrequirements-dev.txt
-whitelist_externals=coverage,pip
+deps = -rrequirements-dev.txt
+whitelist_externals = coverage, pip
 # See .coveragerc for list of omitted files
 commands = coverage erase
-           coverage run -a --source ./sksurgeryimage -m pytest
-           coverage report -m
+coverage run - a - -source ./sksurgeryimage - m pytest
+coverage report - m
 
 [testenv:lint]
-basepython=python3.6
-deps=pylint
-     {[testenv]deps}
-commands=pylint --rcfile=tests/pylintrc sksurgeryimage --exit-zero
+basepython = python3.6
+deps = pylint
+{[testenv]deps}
+commands = pylint - -rcfile = tests/pylintrc sksurgeryimage - -exit-zero
 
 [testenv:docs]
-basepython=python3.6
+basepython = python3.6
 changedir = doc
-commands = sphinx-build -M html . build
+commands = sphinx-build - M html . build
 
 [testenv:installer]
-basepython=python3.6
-commands=pyinstaller --onefile sksurgeryimage.py --noconfirm --windowed
+basepython = python3.6
+commands = pyinstaller - -onefile sksurgeryimage.py - -noconfirm - -windowed
 
 [testenv:pip2]
-basepython=python2.7
-changedir=pip_test
-skip_install=True
+basepython = python2.7
+changedir = pip_test
+skip_install = True
 commands = pip install {posargs}
-           sksurgeryimage --help
+sksurgeryimage - -help
 
 [testenv:pip3]
-basepython=python3.6
-changedir=pip_test
-skip_install=True
+basepython = python3.6
+changedir = pip_test
+skip_install = True
 commands = pip install {posargs}
-           sksurgeryimage --help
+sksurgeryimage - -help
