--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands = coverage erase
 basepython=python3.6
 deps=pylint
      {[testenv]deps}
-commands=pylint --rcfile=tests/pylintrc sksurgeryimage --exit-zero
+commands=pylint --rcfile=tests/pylintrc sksurgeryimage
 
 [testenv:docs]
 basepython=python3.6
