Issue #11: Change to read the docs theme.

--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -1,4 +1,6 @@
-/scikit-surgeryimage.rst
-/scikit-surgeryimage.*.rst
+/sksurgeryimage.rst
+/sksurgeryimage.*.rst
+/examples*.rst
 /modules.rst
+/versioneer.rst
 /build
