--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,3 +107,31 @@ deploy docs to production:
     - public
   dependencies:
     - build docs
+    
+    
+deploy pip to production:
+  stage: deploy
+  when: manual
+  only:
+    - tags
+  environment:
+    name: PyPI
+    url: https://pypi.python.org/pypi/scikit-surgeryimage
+    
+  tags:
+    - pip-production
+    
+  artifacts:
+    paths:
+    - dist/
+    
+  script:
+    # remove any previous distribution and build files
+    - rm -rf dist build
+
+    # bundle installer
+    - python setup.py bdist_wheel
+
+    # Upload to testpypi server
+    - twine upload --repository pypi dist/* --username $PYPI_USER --password $PYPI_PASS
+
