Define variables to use for login in gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,6 +110,12 @@ deploy docs to production:
     
     
 deploy pip to production:
+
+  #Tell Gitlab to load these environental vars from the variables list
+  variables:
+    PYPI_USER: SECURE
+    PYPI_PASSWORD: SECURE
+
   stage: deploy
   when: manual
   only:
