--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,14 +113,12 @@ deploy docs to production:
   dependencies:
     - build docs
     
-    
 deploy pip to production:
 
   stage: deploy
   when: manual
   only:
     - tags
-    - master
     
   environment:
     name: PyPI
@@ -143,5 +141,5 @@ deploy pip to production:
     - python setup.py bdist_wheel
 
     # Upload to testpypi server
-    - twine upload --repository pypi dist/* --username $PYPI_USER --password $PYPI_PASS --verbose
+    - twine upload --repository pypi dist/* --username $PYPI_USER --password $PYPI_PASS
 
