--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ test Linux:
   script:
       - tox
   tags:
-    - shared-linux
+    - shared-linux, gui
   coverage: '/^TOTAL.*\s+(\d+\%)$/'
 
 
@@ -72,7 +72,7 @@ test macOS:
   script:
       - tox
   tags:
-    - shared-mac
+    - shared-mac, gui
 
 
 test Windows:
@@ -80,39 +80,8 @@ test Windows:
   script:
       - tox
   tags:
-    - shared-win
+    - shared-win, gui
 
-
-deploy docs to staging:
-  stage: deploy
-  script:
-    # Note: the group/username directory must already exist on the server before calling this command
-    - rsync -avz -e'ssh -v' --numeric-ids --delete doc/build/html/* staging_docs_rsync:WEISS/SoftwareRepositories/scikit-surgeryimage 2>&1
-  tags:
-    - docs-staging
-  environment:
-    name: staging
-    url: http://weisslab-lin.cs.ucl.ac.uk/staging/WEISS/SoftwareRepositories/scikit-surgeryimage
-  only:
-    - master
-  dependencies:
-    - build docs
-
-
-deploy docs to production:
-  stage: deploy
-  script:
-    # Note: the group/username directory must already exist on the server before calling this command
-    - rsync -avz -e'ssh -v' --numeric-ids --delete doc/build/html/* production_docs_rsync:WEISS/SoftwareRepositories/scikit-surgeryimage 2>&1
-  tags:
-    - docs-production
-  environment:
-    name: production
-  only:
-    - public
-  dependencies:
-    - build docs
-    
 deploy pip to production:
 
   stage: deploy
