Issue #26: Add ChArUco and Chessboard point detectors.

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands = coverage erase
 basepython=python3.6
 deps=pylint
      {[testenv]deps}
-commands=pylint --rcfile=tests/pylintrc sksurgeryimage
+commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=cv2 sksurgeryimage
 
 [testenv:docs]
 basepython=python3.6
