--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,7 @@ test Linux:
 #  variables:
 #    LD_LIBRARY_PATH: ${CI_PROJECT_DIR}/.tox/py36/lib/python3.6/site-packages/PySide2/Qt/plugins/platforms
 #    DISPLAY: localhost:1
-#  script:
+   script:
 #    - echo "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}"
 #    - echo "DISPLAY=${DISPLAY}"
     - tox
