--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: python
 
+services:
+  - xfb
+
 matrix:
  include:
   - os: linux
@@ -7,9 +10,6 @@ matrix:
     env: LINT=0
   - os: linux
     python: 3.7
-    env: LINT=0
-  - os: linux
-    python: 3.8
     env: LINT=1
 
 stages:
