Issue #74: Try to replicate services:xfb command from travis.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ jobs:
       matrix:
         os: [ubuntu-18.04, macos-latest, windows-latest]
 
+    services:
+      - xfb
+
     runs-on: ${{ matrix.os }}
 
     steps:
