--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,28 @@
 on: push
 
 jobs:
+  test-ubuntu:
+    runs-on: ubuntu-latest
+    services: xvfb
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.6
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install tox
+
+      - name: Run tox
+        run: |
+          tox
   test:
     strategy:
       matrix:
-        os: [macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
 
@@ -18,12 +36,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install tox
-
-      - name: Set environmental variables for linux
-        if: startsWith(matrix.os, 'ubuntu')
-        run: |
-          echo "::set-env name=LD_LIBRARY_PATH::${{ github.workspace }}/.tox/py36/lib/python3.6/site-packages/PySide2/Qt/plugins/platforms"
-          echo "::set-env name=DISPLAY::localhost:1"
 
       - name: Run tox
         run: |
