--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,6 @@
 on: push
 
 jobs:
-  test-ubuntu:
-    runs-on: ubuntu-latest
-    services: xvfb
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.6
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tox
-
-      - name: Run tox
-        run: |
-          tox
   test:
     strategy:
       matrix:
@@ -36,6 +18,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install tox
+
+      - name: Run xvfb on ubuntu
+        if: startsWith(matrix.os, 'ubuntu')
+        run: |
+          sudo apt-get install xvfb
+          sudo Xvfb :1 -screen 0 1024x768x24 </dev/null &
+          export DISPLAY=":1"
 
       - name: Run tox
         run: |
