--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,12 @@ jobs:
         if: startsWith(matrix.os, 'ubuntu')
         run: |
           sudo apt-get install xvfb
-          Xvfb :1 </dev/null &
-          export DISPLAY=:1
+          sudo Xvfb :1 -screen 0 1024x768x24 </dev/null &
+          export DISPLAY=":1"
+          xvfb-run tox
 
-      - name: Run tox
+      - name: Run tox on windows/mac
+        if: contains(matrix.os, 'o')
         run: |
           tox
 
