--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,11 @@ jobs:
         run: |
           tox
 
+      - name: Run coveralls
+        run: |
+          pip install coveralls pyyaml
+          coveralls
+
   deploy:
     runs-on: ubuntu-18.04
     needs: test
