--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,15 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        python-ver: [3.6, 3.7, 3.8, 3.9, 3.10]
+
+        exclude:
+          - os: macos-latest
+            python-ver: 3.6
+        include:
+          - os: macos-latest
+            python-ver: 3.6
+            experimental: true
 
     runs-on: ${{ matrix.os }}
 
@@ -13,7 +22,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.6
+          python-version: ${{ matrix.python-ver }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
