--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,13 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py36,lint
+envlist = py37,lint
 skipsdist = True
+requires = setuptools >= 47.1
+
 
 [travis]
 python =
-  3.6: py36, docs, lint
+  3.7: py37, docs, lint
 
 [testenv]
 passenv = *
@@ -13,22 +15,22 @@ deps=-rrequirements-dev.txt
 whitelist_externals=coverage,pip
 # See .coveragerc for list of omitted files
 commands = coverage erase
-           coverage run -a --source ./sksurgeryimage -m pytest
+           coverage run -a --source ./sksurgeryimage -m pytest -s
            coverage report -m
 
 [testenv:lint]
-basepython=python3.6
+basepython=python3.7
 deps=pylint
      {[testenv]deps}
 commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=cv2 sksurgeryimage
 
 [testenv:docs]
-basepython=python3.6
-changedir = doc
+basepython=python3.7
+changedir = docs
 commands = sphinx-build -M html . build
 
 [testenv:installer]
-basepython=python3.6
+basepython=python3.7
 commands=pyinstaller --onefile sksurgeryimage.py --noconfirm --windowed
 
 [testenv:pip2]
@@ -39,7 +41,7 @@ commands = pip install {posargs}
            sksurgeryimage --help
 
 [testenv:pip3]
-basepython=python3.6
+basepython=python3.7
 changedir=pip_test
 skip_install=True
 commands = pip install {posargs}
