--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-ver: [3.6, 3.7, 3.8, 3.9]
-
-        exclude:
-          - os: macos-latest
-            python-ver: 3.6
+        python-ver: [3.7, 3.8, 3.9]
 
     runs-on: ${{ matrix.os }}
 
