--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,15 @@ on: push
 
 jobs:
   test:
+    runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.experimental }}
+
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-ver: [3.9, '3.10', 3.11, 3.12, 3.13]
-
-    runs-on: ${{ matrix.os }}
+        experimental: [false]
 
     steps:
       - uses: actions/checkout@v3
