--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-numpy
-opencv-contrib-python-headless>=4.2.0.32
+numpy<2.0.0
+opencv-contrib-python-headless>=4.2.0.32,<4.6
 scikit-surgerycore>=0.1.0
