Issue #112: Update tox.ini to py3.10

--- a/tox.ini
+++ b/tox.ini
@@ -1,48 +1,23 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py37,lint
+envlist = test,lint
 skipsdist = True
-requires = setuptools >= 47.1
-
-
-[travis]
-python =
-  3.7: py37, docs, lint
 
 [testenv]
+basepython=python3.10
 passenv = *
 deps=-rrequirements-dev.txt
+
+[testenv:test]
 whitelist_externals=coverage,pip
 # See .coveragerc for list of omitted files
 commands = coverage erase
-           coverage run -a --source ./sksurgeryimage -m pytest -s
+           coverage run -a --source ./sksurgeryimage -m pytest -v -s ./tests/
            coverage report -m
 
 [testenv:lint]
-basepython=python3.7
-deps=pylint
-     {[testenv]deps}
 commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=cv2 sksurgeryimage
 
 [testenv:docs]
-basepython=python3.7
 changedir = docs
 commands = sphinx-build -M html . build
-
-[testenv:installer]
-basepython=python3.7
-commands=pyinstaller --onefile sksurgeryimage.py --noconfirm --windowed
-
-[testenv:pip2]
-basepython=python2.7
-changedir=pip_test
-skip_install=True
-commands = pip install {posargs}
-           sksurgeryimage --help
-
-[testenv:pip3]
-basepython=python3.7
-changedir=pip_test
-skip_install=True
-commands = pip install {posargs}
-           sksurgeryimage --help
