--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-numpy<2.0.0
-opencv-contrib-python-headless>=4.2.0.32,<4.6
+numpy>=2.0.0
+opencv-contrib-python-headless>=4.10.0.82
 scikit-surgerycore>=0.1.0
