--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,18 +6,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-ver: [3.9, '3.10', 3.11, 3.12]
+        python-ver: [3.9, '3.10', 3.11, 3.12, 3.13]
         experimental: [false]
-        include:
-          - python-ver: 3.13
-            os: ubuntu-latest
-            experimental: false
-          - python-ver: 3.13
-            os: macos-latest
-            experimental: false
-          - python-ver: 3.13
-            os: windows-latest
-            experimental: true
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
 
