Issue #112: Don't lint _version.py

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Linting
         run: |
-          pylint --rcfile=tests/pylintrc sksurgeryimage
+          pylint --rcfile=tests/pylintrc --ignore _version.py sksurgeryimage
 
       - name: Run coveralls
         run: |
