--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands = coverage erase
            coverage report -m
 
 [testenv:lint]
-commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=cv2 sksurgeryimage
+commands=pylint --rcfile=tests/pylintrc --ignore _version.py sksurgeryimage
 
 [testenv:docs]
 changedir = docs
